--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                 <h1>Your One-Stop VTU & Digital Platform</h1>
                 <p>Buy/Sell Airtime, Data, Betting Funds, Electricity, Crypto & More. Grow your social media and earn with micro-tasks.</p>
                 <div class="cta-buttons">
-                    <a href="register.html" class="cta-button">Register Now</a>
+                    <a href="homepage.html" class="cta-button">Register Now</a>
                     <a href="login.html" class="cta-button secondary">Login</a>
                 </div>
             </div>
